--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,7 +39,7 @@ body {
   background-position: top center !important;
   background-repeat: no-repeat !important;
   color: #fff;
-  background-color: black;
+  background-color: #050505;
   font-family: "Rubik_Regular", sans-serif;
 }
 
